# LoopieEngineGroup6

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Loopie/: CMakeLists.txt
Loopie/src/Loopie/Audio/: AudioManager.cpp  AudioManager.h  AudioSystem.cpp  AudioSystem.h
Loopie/src/Loopie/Components/: AudioListener.h  AudioSource.h  AutoMovement.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Transform.cpp  Transform.h
Loopie/src/Loopie/Core/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  Identificable.cpp  Identificable.h  InputEventManager.cpp  InputEventManager.h  Log.cpp  Log.h  Math.h  Module.h  Time.cpp  Time.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Loopie/src/Loopie/Events/: Event.cpp  Event.h  EventTypes.h  IObserver.h
Loopie/src/Loopie/Files/: Json.cpp  Json.h  MeshImporter.cpp  MeshImporter.h  OrbitalCamera.cpp  OrbitalCamera.h
Loopie/src/Loopie/ImGui/: ImGuiManager.cpp
Loopie/src/Loopie/Importers/: AudioImporter.cpp  AudioImporter.h  MaterialImporter.cpp  MaterialImporter.h  MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h
Loopie/src/Loopie/Math/: AABB.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
Loopie/src/Loopie/Project/: Project.cpp  Project.h
Loopie/src/Loopie/Render/: BufferLayout.h  Colors.h  Gizmo.cpp  Gizmo.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  TextureBuffer.cpp  TextureBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Loopie/src/Loopie/Resources/: AssetRegistry.cpp  AssetRegistry.h  MetadataRegistry.cpp  MetadataRegistry.h  Resource.h  ResourceDatabase.cpp  ResourceDatabase.h  ResourceManager.cpp  ResourceManager.h
Loopie/src/Loopie/Resources/Types/: AudioClip.cpp  AudioClip.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Loopie/src/Loopie/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
LoopieEditor/: CMakeLists.txt  ImGuiLayout.txt
LoopieEditor/assets/shaders/: DefaultShader.shader  LineShader.shader  SelectionOutline.shader
LoopieEditor/src/: EditorApplication.cpp  EditorModule.cpp  EditorModule.h  ProjectSetupModule.cpp  ProjectSetupModule.h
LoopieEditor/src/Editor/: EditorApplication.cpp
LoopieEditor/src/Editor/Interfaces/Workspace/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  EditorMenuInterface.cpp  GameInterface.cpp  GameInterface.h  HierarchyInterface.cpp  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h  TopBarInterface.cpp
LoopieEditor/src/Editor/Modules/: EditorModule.cpp  EditorModule.h
LoopieEditor/src/Editor/Others/: OrbitalCamera.cpp
LoopieEditor/src/ImGuiHelpers/: ImGuiHelpers.cpp  ImGuiHelpers.h
LoopieEditor/src/Interfaces/Editor/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  ConsoleInterface.cpp  ConsoleInterface.h  EditorMenuInterface.cpp  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h
LoopieEditor/src/Interfaces/ProjectSetup/: ProjectSetupInterface.cpp  ProjectSetupInterface.h
LoopieEditor/src/Others/: DebugCamera.h  OrbitalCamera.cpp  OrbitalCamera.h
